fix: html overflow hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html {
     font-size: 16px;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
